Revert "Fixes: Edited the pom.xml for more dependencies."
This reverts commit e441d7fc48b940e1518148881c8aee62fa967553.